tests/errors/syn_method9.java
public class syn_method9 {
public static String main ) {
 
}
}